--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -5,3 +5,35 @@
 div {
 	border: solid 1px black;
 }
+
+body {
+	font-family: "Helvetica";
+}
+
+.flex-container {
+	display: flex;
+	margin: 0 auto;
+}
+
+.nav {
+	height: 64px;
+	display: inline-flex;
+	padding-left: 24px;
+	justify-content: space-between;
+    align-items: center;
+	
+}
+
+.Mobile-menu {
+	display: none;
+}
+
+.menu {
+	align-content: center;
+}
+
+.menu li {
+	padding-right: 16px;
+	display: inline;
+	
+}
