--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -8,6 +8,7 @@ div {
 
 body {
 	font-family: "Helvetica";
+	font-size: 16px;
 }
 
 .flex-container {
@@ -34,4 +35,37 @@ body {
 .menu li {
 	padding-right: 16px;
 	display: inline;	
+}
+
+.banner {
+	display: inline;
+	padding-left: 24px;
+}
+
+.banner img {
+	width: 60%;
+	height: auto;
+}
+
+.content-block {
+	display: inline-flex;
+}
+
+.image-block {
+	padding: 32px 24px 32px 24px;
+}
+
+.content-block img {
+	width: 60%;
+	height: auto;
+}
+
+.news-blocks {
+	width: 423px;
+}
+
+h2 {
+	padding-top: 32px;
+	font-weight: bold;
+	font-size: 1.5rem;
 }
