--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -9,6 +9,8 @@ div {
 body {
 	font-family: "Helvetica";
 	font-size: 16px;
+	max-width: 1024px;
+	margin: auto;
 }
 
 .flex-container {
@@ -158,26 +160,26 @@ h6 {
 .Thesis {
 	display: flex;
 	width: 100%;
-	align-items: center;
 	flex-wrap: wrap;
 }
 
 .thesis-main {
 	padding-left: 1.5rem;
-	max-width: 60%;
+	max-width: 50%;
 }
 
 .thesis-subs {
 	display: flex;
     flex-direction: column;
-    align-items: center;
     width: 423px;
-    margin-left: 50px;
-    margin-right: -50px;
+	margin-left: 1rem;
+}
+
+.thesis-subs .news {
+	height: 168px;
 }
 
 .Thesis img {
-	
 	padding: 1rem;
 	width: 35%;
 }
@@ -193,6 +195,11 @@ video {
 footer {
 	display: inline;
 	padding-left: 1.5rem;
+	max-width: 100%;
+}
+
+.footer-nav {
+	display: inline;
 }
 
 
