--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .banner img {
-	width: 60%;
+	max-width: 60%;
 	height: auto;
 	padding: 2rem 2.5rem 2rem 1.5rem;
 	float: left;
@@ -80,7 +80,7 @@ body {
 
 .image-block {
 	padding: 2rem 1.5rem 2rem 1.5rem;
-	width: 60%;
+	max-width: 60%;
 }
 
 .content-block img {
@@ -92,12 +92,14 @@ body {
 .news-blocks {
 	max-width: 423px;
 	flex-direction: column;
+	padding-top: 0px;
 }
 
 .news-blocks img {
 	float: left;
 	padding: 1rem;
 	max-width: 35%;
+	align-items: flex-start;
 }
 
 .news {
@@ -108,6 +110,10 @@ body {
 
 .image-block p {
 	padding-bottom: 1.5rem;
+}
+
+.news p {
+	padding: .5rem 0 .5rem 0;
 }
 
 /* Headers */
@@ -125,7 +131,7 @@ h2 {
 }
 
 h3 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-weight: bold;
 	color: lightslategrey;
 	padding-bottom: 1rem;
@@ -134,7 +140,7 @@ h3 {
 h4 {
 	padding-top: 32px;
 	font-weight: bold;
-	font-size: 1.5rem;
+	font-size: 2rem;
 	color:lightslategrey;
 	padding-bottom: 1.5rem;
 }
@@ -143,6 +149,7 @@ h6 {
 	font-weight: bold;
 	color: #4C4C4C;
 	padding-bottom: .5rem;
+	font-size: 1.25rem;
 }
 
 button {
@@ -171,6 +178,8 @@ button {
 
 .learning-block img {
 	max-width: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 .learning-block h6 {
